feat(backtester): implement cost calculation and fix SHORT logic
- Implement logic for calculating the costs of opening and closing positions, as well as liquidation cost for the final position
- Correct the cash flow logic for opening/closing SHORT positions